upd ya bien bien

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="bg-[#d6d6d6]">
       <div class="text-center text-3xl flex flex-col items-center justify-center px-5 gap-10 my-20">
         <h2 class="cal-sans">Tenemos el honor de invitarlos a celebrar nuestro 25° aniversario el día</h2>
-        <p class="playfair-display tracking-widest text-5xl font-thin mt-5">Jul <span class="text-white font-semibold">|</span> <span class="text-[#545454]">05</span> <span class="text-white font-semibold">|</span>  2025</p>
+        <img class="w-100" src="assets/img/FECHA.png" alt="">
       </div>
     </div>
     <div class="frase flex flex-col items-center justify-center text-center text-white bg-[url(assets/img/frase-img.png)] bg-cover bg-center py-10">
